hphp/hack/test/typecheck/construct_default_values.php.exp
File "construct_default_values.php", line 11, characters 20-26:
Expected constant expression for initializer (Parsing[1002])
File "construct_default_values.php", line 12, characters 22-36:
Expected constant expression for initializer (Parsing[1002])
File "construct_default_values.php", line 12, characters 29-29:
Read access to `$this->b` before initialization (Typing[4083])
File "construct_default_values.php", line 12, characters 32-34:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "construct_default_values.php", line 12, characters 17-18:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "construct_default_values.php", line 5, characters 19-21:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
